welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:6: error: not found: value pos
   while ({nums(pos) != value}&&{pos != nums.length-1}) {
                ^occurrences:7: error: not found: value pos
   	pos = pos + 1;
        ^occurrences:11: error: not found: value pos
   if ( nums(pos) == value ) {
             ^occurrences:12: error: not found: value pos
   	pos;
        ^